--- a/style.css
+++ b/style.css
@@ -19,14 +19,15 @@ html, body {
   }
 
   h4 {
-    letter-spacing: -7px;
+    letter-spacing: -3.5px;
     font-family: Open Sans;
     color: white;
     text-align: center;
-    font-size: 100px;
-    font-weight: 400;
-    line-height: 100px;
+    font-size: 50px;
+    font-weight: 200;
+    line-height: 50px;
     margin:0;
+    margin-bottom: 2.5%;
   }
   
   
@@ -50,6 +51,13 @@ html, body {
     background-color: grey;
     z-index: 1;
   }
+  #contact{
+    position: relative;
+    display: block;
+    background-color: white;
+    z-index: 1;
+  }
+
   
   .Content {
     max-width: 750px;
@@ -60,7 +68,31 @@ html, body {
   p {
     margin: 75px 0;
   }
+
+  .NavContainer ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
   
+  .NavContainer li {
+    float: right;
+  }
+  
+  .NavContainer li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .NavContainer li a:hover {
+    background-color: #111;
+  }
+
   .ParallaxContainer {
     display: flex;
     flex: 1 0 auto;
