--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@
     display: block;
     background-color: white;
     z-index: 1;
+    
   }
 
   #about{
@@ -84,7 +85,7 @@
   .Content {
     max-width: 750px;
     margin: 0 auto;
-    padding: 75px 0;
+    padding: 5% 5%;
   }
   
   p {
@@ -148,7 +149,6 @@
     grid-template-rows: repeat(1, 1fr);
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2px;
-    padding: 1%;
   }
 
   img{
@@ -156,7 +156,7 @@
   }
 
   .fa {
-    margin: 10px 10px;
+    margin: auto auto;
     padding: 20px;
     font-size: 30px;
     width: 30px;
@@ -179,6 +179,7 @@
 
   #footer{
     text-align: center;
+    padding: .1% 0;
   }
   
 
