--- a/style.css
+++ b/style.css
@@ -158,8 +158,8 @@
   .fa {
     margin: auto auto;
     padding: 20px;
-    font-size: 30px;
-    width: 30px;
+    font-size: 20px;
+    width: 20px;
     text-align: center;
     text-decoration: none;
     border-radius: 50%;
@@ -172,6 +172,8 @@
   }
 
   #contactcontainer{
+    margin: 10% auto;
+    margin-bottom: 0;
     width: 100%;
     display: flex;
     justify-content: center;
