--- a/style.css
+++ b/style.css
@@ -159,6 +159,14 @@
     grid-gap: 2px;
   }
 
+  #shuffl{
+    width: 100%;
+    display: grid;
+    grid-template-rows: repeat(1, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 2px;
+  }
+
   img{
     width:100%;
   }
