--- a/style.css
+++ b/style.css
@@ -44,9 +44,8 @@
   h2{
     text-align: center;
   }
-  
+
   .MainContainer {
-    
     perspective: 1px;
     transform-style: preserve-3d;
     height: 100vh;
@@ -139,7 +138,6 @@
     background-repeat: no-repeat;
     background-color: gray;
     background-position: right;
-    
   }
  
   .ParallaxContainer p {
@@ -151,24 +149,12 @@
     line-height: 100px;
   }
 
-  .imgcontainer{
-    width: 100%;
-    display: grid;
-    grid-template-rows: repeat(1, 1fr);
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 2px;
-  }
 
-  #shuffl{
-    width: 100%;
-    display: grid;
-    grid-template-rows: repeat(1, 1fr);
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 2px;
-  }
-
-  img{
-    width:100%;
+  .imgcontainer img{  
+    display: block;
+    margin: 0 auto;
+    max-height:500px;
+    width:auto;
   }
 
   .fa {
@@ -181,10 +167,11 @@
     border-radius: 50%;
     background-color: #333;
     color: white;
+    transition: all 0.5 ease-in-out;
   }
   
   .fa:hover {
-    opacity: 0.7;
+    background-color: #666;
   }
 
   #contactcontainer{
