--- a/style.css
+++ b/style.css
@@ -150,11 +150,12 @@
   }
 
 
-  .imgcontainer img,  video{  
+  .imgcontainer img, video{  
     display: block;
     margin: 0 auto;
     max-height:500px;
     width:auto;
+    max-width: 100%;
   }
 
   .fa {
