--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@
     
     color: white;
     text-align: center;
-    font-size: 200px;
+    font-size: 20vw;
     font-weight: 800;
-    line-height: 200px;
+    line-height: 15vw;
     margin:0;
     margin-top:auto;
   }
@@ -187,6 +187,6 @@
     text-align: center;
     padding: .1% 0;
   }
-  
+
 
   
